--- a/index.html
+++ b/index.html
@@ -23,33 +23,12 @@
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/4.6.1/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/4.6.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/4.6.1/firebase-database.js"></script>
-    <script defer src="/__/firebase/4.6.1/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/4.6.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/init.js"></script>
-    <script>
-          document.addEventListener('DOMContentLoaded', function() {
-            // // The Firebase SDK is initialized and available here!
-            //
-            // firebase.auth().onAuthStateChanged(user => { });
-            // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-            // firebase.messaging().requestPermission().then(() => { });
-            // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-            //
-            try {
-              let app = firebase.app()
-              let features = ['auth', 'database', 'messaging', 'storage']
-              .filter(feature => typeof app[feature] === 'function')
-            } catch (e) {
-              console.error(e)
-            }
-          });
-    </script>
+    <!-- Vue -->
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <!-- Firebase -->
+    <script src="https://gstatic.com/firebasejs/4.0.0/firebase.js"></script>
+    <!-- VueFire -->
+    <script src="https://unpkg.com/vuefire/dist/vuefire.js"></script>
   </head>
   <body>
     <div id="content" class="content"></div>
